[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game_Over.gd" type="Script" id=1]
[ext_resource path="res://fonts/font-2-export.fnt" type="BitmapFont" id=2]
[ext_resource path="res://fonts/font-1-export.fnt" type="BitmapFont" id=3]
[ext_resource path="res://background/space.jpg" type="Texture" id=4]
[ext_resource path="res://fonts/C&C Red Alert [INET].ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 5 )

[node name="Game_Over" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="GameOverLabel" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = -128.0
margin_right = 174.0
margin_bottom = -86.0
custom_fonts/font = ExtResource( 2 )
text = "game over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLabel" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = 38.0
margin_right = 174.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 3 )
text = "Press [R] to Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentScoreLabel" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -48.0
margin_right = 111.0
margin_bottom = -6.0
custom_fonts/font = ExtResource( 3 )
text = "TIME - "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScoreLabel" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -22.0
margin_right = 112.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "BEST TIME - "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -218.0
margin_top = -48.0
margin_right = 219.0
margin_bottom = -6.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MAJORITY OF ASSETS/SOUNDS PROVIDED BY: http://superpowers-html5.com/
GAMEOVER MUSIC BY: Cleyton Kauffman @ https://soundcloud.com/cleytonkauffman
additional gun sound effects from https://www.zapsplat.com"
__meta__ = {
"_edit_use_anchors_": false
}
